<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="bottom|center"
            android:padding="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:fontFamily="@font/rounded"
                android:text="@string/enter_player_names" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/player_one_enter_names"
                android:textSize="40sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black"
                android:gravity="bottom|center"/>
            <EditText
                android:id="@+id/playeronename"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="25dp"
                android:textSize="40sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black"
                android:gravity="bottom"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/player_two_enter_names"
                android:textSize="40sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black"
                android:gravity="bottom|center"/>
            <EditText
                android:id="@+id/playertwoname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="25dp"
                android:textSize="40sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black"
                android:gravity="bottom"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/play"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:fontFamily="@font/rounded"
                android:onClick="onPlayClickInNames"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>