<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="statistics"
            android:fontFamily="@font/rounded"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/rounded"
            android:textSize="40sp"
            android:text="@string/best_results"
            android:paddingLeft="20dp"
            android:gravity="left|center"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="1."/>
            <TextView
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/rounded"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="left|center"
                android:paddingLeft="10dp" />
            <TextView
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="2."/>
            <TextView
                android:id="@+id/name2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/rounded"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="left|center"
                android:paddingLeft="10dp" />
            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="3."/>
            <TextView
                android:id="@+id/name3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/rounded"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="left|center"
                android:paddingLeft="10dp" />
            <TextView
                android:id="@+id/score3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:text="4."
                android:textColor="@color/black"
                android:textSize="35sp" />
            <TextView
                android:id="@+id/name4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/rounded"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="left|center"
                android:paddingLeft="10dp" />
            <TextView
                android:id="@+id/score4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="5."/>
            <TextView
                android:id="@+id/name5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/rounded"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="left|center"
                android:paddingLeft="10dp" />
            <TextView
                android:id="@+id/score5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rounded"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rounded"
        android:textSize="40sp"
        android:text="@string/all_time"
        android:paddingLeft="20dp"
        android:gravity="left|center"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="35sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black"
                android:text="@string/x_won"/>
            <TextView
                android:id="@+id/xscore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="35sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="35sp"
            android:fontFamily="@font/rounded"
            android:textColor="@color/black"
            android:text="@string/o_won"/>
            <TextView
                android:id="@+id/oscore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="35sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="35sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black"
                android:text="@string/tie"/>
            <TextView
                android:id="@+id/tiescore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="35sp"
                android:fontFamily="@font/rounded"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="35sp"
            android:fontFamily="@font/rounded"
            android:text="clear"
            android:onClick="onClearStatistics"/>
    </LinearLayout>

</LinearLayout>